# S3-sync

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  Dockerfile-dev  Dockerfile-old  LICENSE  README.md  start.sh
bucketlists/: bucket_list_1.txt
datetime/: datetime.txt
src/: main.rs
